--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ pydantic-settings
 httpx
 google-cloud-storage
 python-multipart
+google-auth 
+google-auth-oauthlib 
+google-auth-httplib2 
+google-api-python-client
