--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ google-auth
 google-auth-oauthlib 
 google-auth-httplib2 
 google-api-python-client
+google-generativeai
+google-auth 
+google-auth-oauthlib 
+google-auth-httplib2 
+google-api-python-client
